--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [tool.commitizen]
 version = "0.2.4"
 version_files = [
-    "setup.cfg:version",
-    "setup.py:version"
+    "setup.cfg:^version"
 ]
