--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [tool.commitizen]
+name = "cz_conventional_commits"
 version = "0.2.5"
 version_files = [
-    "setup.cfg:^version"
+    "setup.cfg:version"
 ]
