feat: update metadata in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
+[tool.nanotank.metadata]
+module = "nanotank"
+author = "Daniel Antoš"
+author-email = "daniel.antos@seznam.cz"
+
 [tool.commitizen]
 name = "cz_conventional_commits"
 version = "0.2.6"
-version_files = [
-    "setup.cfg:version"
-]
